WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
29705
Web Inspector: Fix formatting for messages derived from resource warnings, couple of drive-by fixes.
https://bugs.webkit.org/show_bug.cgi?id=29705
Summary
Web Inspector: Fix formatting for messages derived from resource warnings, co...
Pavel Feldman
Reported
2009-09-24 01:02:20 PDT
For watch panel, console and properties section to use the same code, we wrap all the result of the evaluation (even in case of primitive values). However, WebInspector's addMessage API is also used from within frontend (for resource warnings). This should be resolved. The patch also has a handful of drive-by fixes.
Attachments
patch
(6.24 KB, patch)
2009-09-24 01:05 PDT
,
Pavel Feldman
no flags
Details
Formatted Diff
Diff
same with watch abbreviation
(6.12 KB, patch)
2009-09-24 02:09 PDT
,
Pavel Feldman
timothy
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Pavel Feldman
Comment 1
2009-09-24 01:05:49 PDT
Created
attachment 40050
[details]
patch
Pavel Feldman
Comment 2
2009-09-24 02:09:31 PDT
Created
attachment 40053
[details]
same with watch abbreviation
Pavel Feldman
Comment 3
2009-09-24 04:58:05 PDT
Committing to
http://svn.webkit.org/repository/webkit/trunk
... M WebCore/ChangeLog M WebCore/inspector/InspectorFrontend.cpp M WebCore/inspector/front-end/ConsoleView.js M WebCore/inspector/front-end/InjectedScript.js M WebCore/inspector/front-end/WatchExpressionsSidebarPane.js Committed
r48717
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug