WebCore/inspector/front-end/WatchExpressionsSidebarPane.js
@@ -84,9 +84,13 @@ WebInspector.WatchExpressionsSection.prototype = {
     {
         function appendResult(expression, watchIndex, result, exception)
         {
-            // The null check catches some other cases, like null itself, and NaN
-            if ((typeof result !== "object") || (result == null))
-                result = new WebInspector.ObjectProxy(null, [], 0, String(result), false);
+            if (exception) {
+                // Exception results are not wrappers, but text messages.
+                result = WebInspector.ObjectProxy.wrapPrimitiveValue(result);
+            } else if (result.type === "string") {
+                // Evaluation result is intentionally not abbreviated. However, we'd like to distinguish between null and "null"
+                result.description = "\"" + result.description + "\"";
+            }
 
             var property = new WebInspector.ObjectPropertyProxy(expression, result);
             property.watchIndex = watchIndex;
@@ -95,7 +99,7 @@ WebInspector.WatchExpressionsSection.prototype = {
             // since otherwise you get DOMWindow
             if (property.name === WebInspector.WatchExpressionsSection.NewWatchExpression) 
                 property.value.description = "";
-            
+
             // To clarify what's going on here: 
             // In the outer function, we calculate the number of properties
             // that we're going to be updating, and set that in the
